# jmbde-QT

./: .LICENSE-HEADER  .appveyor.yml  .buildinfo  .bumpversion.cfg  .checkov.yml  .clang-format  .clang-tidy  .clangd  .clazy  .clog.toml  .cmake-format  .cmake-format.py  .cmake-format.yaml  .cmake-format.yml  .cmake-lint.yaml  .cmake-lint.yml  .coafile  .codacy.yml  .codecov.yml  .codespellrc  .cproject  .cspellcache  .dmg  .dockerignore  .editorconfig  .envrc  .eslintignore  .eslintrc.js  .eslintrc.json  .fossa.yml  .gitattributes  .github_changelog_generator  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitlint  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .grype.yaml  (+1717 more)
app/: CMakeLists.txt
app/SingleApplication/: CHANGELOG.md  LICENSE  README.md  SingleApplication  Windows.md
app/data/: io.github.jmuelbert.jmbde.desktop  jmbde.qrc
app/src/: main.cpp
app/test/: CMakeLists.txt
appquick/: CMakeLists.txt
appquick/src/: main.cpp
apps/jmbde-quick/: CMakeLists.txt  jmbde_version.h
apps/jmbde-quick/SingleApplication/: CHANGELOG.md
apps/jmbde-quick/data/: io.github.jmuelbert.jmbdequick.appdata.xml  jmbde.qrc
apps/jmbde-quick/src/: main.cpp
apps/jmbde-quick/test/: CMakeLists.txt  tests.cpp
apps/jmbde-quick/translations/: jmbde_bg.ts  jmbde_cs.ts  jmbde_de.ts  jmbde_en.ts  jmbde_es.ts  jmbde_fa.ts  jmbde_gd.ts  jmbde_hu.ts  jmbde_nl.ts  jmbde_pl.ts  jmbde_sk.ts  jmbde_zh_CN.ts  jmbde_zh_TW.ts  translations.qrc
apps/libs/: CMakeLists.txt
apps/libs/models/: CMakeLists.txt  CMakeLists_files.cmake  conanfile.py
apps/libs/quick/: CMakeLists.txt  CMakeLists_files.cmake  conanfile.py
apps/libs/widgets/: CMakeLists.txt  CMakeLists_files.cmake  conanfile.py  libjmbde.qmlproject
doc/: CMakeLists.txt  app-online.qdocconf  app.qdoc  app.qdocconf  custom.css  doc.pri  doc.qbs  fixnavi.pl  footer.html.in  header.html.in  index.rst  jmbde-online.qdocconf  jmbde.pod  jmbde.qch  jmbde.qdocconf  make.bat
doc/_build/doctrees/: index.doctree
doc/api/: app-dev-online.qdocconf  app-dev.qdocconf
doc/config/: app-developer.qdocconf  app-project.qdocconf  jmbde-project.qdocconf  macros.qdocconf  macros.qdocconfig
doc/config/style/: qt5-sidebar.html
doc/doxygen/: Doxyfile
doc/man/: jmbde.1  man.qbs  see-also.h2m
doc/src/: index.html  jmbde.qdoc  preferences.html
docs/: CMakeLists.txt  CODE_OF_CONDUCT.rst  Doxyfile.in  README.md  README.template  Taskfile.yml  _CONTRIBUTING.rst  _config.yml  building.md  compiling.md  conf.py  conf.py.in  contributing.rst  database-design.md  dependencies.md  docker.md  glossary.rst  index.md  index.rst  jmbde.md  requirements.txt  shortcuts.rstext  update_versions.py
docs/_static/css/: custom.css
docs/api/: CMakeLists.txt  Doxyfile.in  cpp_doxygen_sphinx.rst  index.rst
docs/chapters/: database.rst  getting_involved.rst  introduction.rst  user_interface.rst
docs/cmake/: FindSphinx.cmake  index.rst  variables.rst
docs/dox/: CMakeLists.txt  conf.py
docs/dox/pages/: about.dox
docs/man/: jmbde.rst
docs/manual/: CMakeLists.txt  conf.py  conf.py.in  glossary.rst  index.rst  introduction.rst  manual.qrc  shortcuts.rstext
docs/manual/chapters/: appendix.rst  database.rst  getting_involved.rst  getting_started.rst  introduction.rst  preferences.rst  user_interface.rst
docs/reference/: database-changelog.rst
docs/root/: index.html
examples/jmbdequick/: CMakeLists.txt
packaging/linux/: CMakeLists.txt  app.spec  app.spec.in  com.jmuelbert.jmbde.desktop  com.jmuelbert.jmbde.metainfo.xml  com.jmuelbert.jmbde.ymal  cpackGeneratorOverrides.cmake  jmbde  jmbde.spec.in  org.jmuelbert.jmbde.desktop  org.jmuelbert.jmbde.metainfo.xml
pch/: CMakeLists.txt  empty_pch.c  pch.h
src/app/: CHANGELOG.md  CMakeLists.txt  CMakelists.txt  Info.plist  Messages.sh  accountdatamodel.h  app-Info.plist  app.pro  app.qbs  app_version.h.in  app_version_header.qbs  apps.qbs  chipcarddatamodel.cpp  chipcarddatamodel.h  chipcarddoorsdatamodel.cpp  chipcarddoorsdatamodel.h  chipcardinputarea.cpp  chipcardinputarea.h  chipcardinputarea.ui  chipcardprofiledatamodel.cpp  chipcardprofiledatamodel.h  cityinputarea.cpp  cityinputarea.h  cityinputarea.ui  citynamedatamodel.cpp  citynamedatamodel.h  commondatamodel.cpp  companydatamodel.cpp  companydatamodel.h  computerdatamodel.h  computerinputarea.cpp  computerinputarea.h  computerinputarea.ui  computersoftwaredatamodel.h  constants.h  csvimportdialog.cpp  datamodel.cpp  datamodel.h  definitions.h  departmentdatamodel.cpp  (+73 more)
src/appquick/: CHANGELOG.md  CMakeLists.txt  config.h.in
src/common/: CMakeLists.txt  libjmbde.qmlproject
src/jmbdequick/: CMakeLists.txt  deployment.pri  jmbdequick.pro  jmbdequick.qbs  main.cpp
src/libs/: CMakeLists.txt
tests/: .gitignore  CMakeLists.txt  constexpr_tests.cpp  jmbde.pro.user.b739db5.2.7pre1  jmbdeTest.pro  test_context.cpp  test_context.h  tests.cpp  tests.pri  tests.pro  tests.qbs  tst_bdetest.cpp  tst_datacontext.cpp  tst_jmbdetest.cpp  tst_keynavigation.qml  tst_test.cpp  tst_test.h  tst_test_data.cpp
tests/auto/: CMakeLists.txt  auto  auto.pri  auto.pro  auto.qbs  jmbdeFirstTest.cpp  jmbdefirsttest.cpp  jmbdefirsttest.h
tests/auto-cpp/: auto-cpp.pro  auto-cpp.qbs  tst_test.cpp  tst_test.h
tests/auto-qml/: auto-qml.pro  auto-qml.qbs  main.cpp  tst_test.cpp  tst_test.qml
tests/data/: data.pro  tst_data_test.cpp
tests/emscripten/: CMakeLists.txt  Taskfile.yml  main.cpp
tests/install/: CMakeLists.txt  conanfile.txt  vcpkg.json
tests/minimal/: CMakeLists.txt  main.cpp  vcpkg.json
tests/models/: CMakeLists.txt  tst_datacontext.cpp
tests/myproj/: CMakeLists.txt
translations/: CMakeLists.txt  app_ar.ts  app_ar_DZ.ts  app_bg.ts  app_ca.ts  app_cd.ts  app_cs.ts  app_da.ts  app_de.ts  app_en.ts  app_es.ts  app_fa.ts  app_fi.ts  app_fr.ts  app_gd.ts  app_gl.ts  app_he.ts  app_hu.ts  app_it.ts  app_ja.ts  app_ko.ts  app_lt.ts  app_lv.ts  app_nb.ts  app_nl.ts  app_pl.ts  app_pt.ts  app_pt_PT.ts  app_ru.ts  app_sk.ts  app_tr.ts  app_uk.ts  app_zh.ts  app_zh_CN.ts  app_zh_TW.ts  jmbde.rc.in  jmbde_ar.ts  jmbde_ar_DZ.ts  jmbde_bg.ts  jmbde_ca.ts  (+32 more)
(+2342 files in other folders)
